# backend-ai

./: README.md  pyproject.toml
src/backend_ai/: __init__.py  __main__.py  main.py
src/backend_ai/llm/: chat.py
src/backend_ai/router/: bedrock.py  router.py  solve.sh
