[project]
name = "backend-ai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "darallium", email = "annihilation0504@gmail.com" }
]
dependencies = [
    "boto3>=1.34.131",
    "langchain>=0.2.5",
    "langchain-community>=0.2.5",
    "fastapi>=0.111.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"backend-ai" = "backend_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend_ai"]
